# ThreadSense

./: .dockerignore  .env  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  supabase_trigger.sql
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  dump_sql.py  main.py  pytest.ini  test_jwt.py
backend/alembic/: env.py
backend/alembic/versions/: 4b7d8d6a1c2f_add_transaction_and_listing_intent.py  64562d44a07f_fastapi_users_columns.py  6b328d59076e_initial_migration.py  6e4d774441f4_add_floor_band_and_filters.py  9adb3df11e7f_create_missing_ingestion_tables.py  a3c7e9f21b04_add_last_heartbeat_at_to_raw_files.py  b6f2d4c9e8a1_pgvector_inventory_schema.py  c8f3a2d7e901_add_auth_fields.py  d7d034f1d1f0_initial_migration.py  e9d2fb0a4fe1_true_cloud_migration.py  f4a042ad1a0f_add_progress_percentage_to_rawfile.py
backend/docs/: pipeline.md
backend/management/: fetch_progress.py  truncate_db.py  truncate_points.py
backend/src/: main.py  startup.py
backend/src/api/: auth_config.py  dependencies.py  main_router.py
backend/src/core/: config.py
backend/src/db/: base.py  diagnostics.py  session.py
backend/src/embeddings/: __init__.py  constants.py  service.py  tasks.py
backend/src/models/: ingestion.py  preprocessing.py  users.py
backend/src/preprocessing/: __init__.py  cleanup_failed_listings.py  extractor.py  pipeline.py  tasks.py
backend/src/rag/: __init__.py  agent.py  (+8 more)
backend/tests/: conftest.py  test_auth.py  test_dedupe.py  test_extractor_enrichment.py  test_ingestion.py  test_query_parser.py  test_rag_filtering.py  test_retriever_rerank.py  test_upload_crud.py
frontend/: .env.example  Dockerfile  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routes.tsx
rust_parser/: .gitignore  Cargo.toml  pyproject.toml
rust_parser/examples/: test_parser.py
rust_parser/src/: lib.rs
rust_parser/tests/: test_parser.rs
(+50 files in other folders)
