[project]
name = "threadsense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langgraph>=1.1.6",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
