[project]
name = "threadsense"
version = "0.1.0"
description = "WhatsApp RAG parser - ThreadSense v2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.0.1",
    "taskiq>=0.11.18",
    "taskiq-redis>=1.0.0",
    "redis>=6.0.0",
    "structlog>=25.4.0",
    "python-multipart>=0.0.20",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "httpx>=0.28.1",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
]
