[package]
name = "whatsapp_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "whatsapp_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
regex = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
rayon = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
once_cell = "1"
encoding_rs = "0.8"
zip = "2"
